improve meta tag

--- a/index.html
+++ b/index.html
@@ -7,26 +7,30 @@
     <meta name="description" content="Welcome to the electrifying realm of LOLux, where laughter meets innovation, and memes reign supreme! Join us in disrupting the crypto cosmos and rewriting the rulebook with pixels of joy. Explore LOLux's laughter-driven economy, vibrant community, and cutting-edge innovation!">
     <meta name="keywords" content="LOLux, crypto, token, laughter, innovation, meme, blockchain, community, economy">
     <title>LOLux - Welcome to the World of LOLux!</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+    <link rel="manifest" href="/assets/img/site.webmanifest">
+    <link rel="stylesheet" href="/assets/css/styles.min.css">
 </head>
 
 <body>
     <div id="particles-js"></div>
     <h1 class="title" style="font-size: 4rem">LOLux</h1>
-    
+
     <div class="meme-container">
         <img id="meme" src="" alt="Meme">
     </div>
 
     <footer>
         <div class="footer-links">
-            <a href="https://twitter.com/LOLux_fun" target="_blank">X</a>
+            <a href="https://twitter.com/LOLux_fun" target="_blank">Twitter / X</a>
             <a href="https://github.com/lolux-fun/lolux" target="_blank">GitHub</a>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/script.min.js"></script>
 </body>
 
 </html>
